[project]
name = "artemis-heimdall"
version = "2.7.0"
requires-python = ">= 3.12"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.isort]
profile = "black"
line_length = 120
known_third_party = ["boto3", "botocore", "pytest"]
known_first_party = [
    "heimdall_utils",
    "heimdall_orgs",
    "heimdall_repos",
    "org_queue",
    "repo_queue",
    "repo_scan",
    "repo_scan_loop",
    "lambdas"
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = [
    "lambdas",
]
exclude = [
    "**/.eggs",
    "**/build",
    "**/dist",
]
extraPaths = [
    "lambdas/layers/heimdall_orgs",
    "lambdas/layers/heimdall_repos",
    "lambdas/layers/heimdall_utils",
]
