[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api_runner"
version = "2023.5"
description = "API Runner Utility"
readme = "README.md"
authors = [
    { name = "WMCSO AppSec", email = "cso_appsec@warnermedia.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Topic :: Security"
]
dependencies = []

[project.optional-dependencies]
test = ["pytest", "pytest-runner"]

[project.urls]
Homepage = "https://github.com/warnermedia/artemis/backend/utilities/api_runner"

[project.scripts]
api_runner = "api_runner.main:main"
