[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plugin_comparer"
version = "2022.4"
description = "Artemis Plugin Comparison Tool"
readme = "README.md"
authors = [
    { name = "WMCSO AppSec", email = "cso_appsec@warnermedia.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Topic :: Security"
]
dependencies = []

[project.optional-dependencies]
test = ["pytest~=8.3", "pytest-runner"]

[project.urls]
Homepage = "https://github.com/warnermedia/artemis/backend/utilities/plugin_comparer"

[project.scripts]
artemis_plugin_comparer = "plugin_comparer.main:main"
