[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbom_dependency_migration"
version = "2023.5"
description = "SBOM Dependency Migration"
readme = "README.md"
authors = [
    { name = "WMCSO AppSec", email = "cso_appsec@warnermedia.com" }
]
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Topic :: Security"
]
dependencies = []

[project.optional-dependencies]
test = ["pytest~=8.3", "pytest-runner"]

[project.urls]
Homepage = "https://github.com/warnermedia/artemis/backend/utilities/sbom_dependency_migration"

[project.scripts]
sbom_dependency_migration = "sbom_dependency_migration.main:main"
