[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "groups_members"
version = "2022.4"
description = "Groups Members API Lambda"
readme = "README.md"
authors = [
    { name = "WMCSO AppSec", email = "cso_appsec@warnermedia.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Topic :: Security"
]
dependencies = []

[project.optional-dependencies]
test = ["pytest~=8.3", "pytest-runner"]

[project.urls]
Homepage = "https://github.com/warnermedia/artemis/backend/lambdas/api/groups_members"

[tool.pytest.ini_options]
addopts = "-m \"not integtest and not end2end\" --disable-pytest-warnings"
testpaths = ["tests"]
