[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "update_github_org_users"
version = "0.0.1" # Update to match update_github_org_users/__version__.py if needed
description = "Get an up-to-date list of GitHub users' organization membership"
readme = "README.md"
authors = [
    { name = "WMCSO AppSec", email = "cso_appsec@warnermedia.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Topic :: Security"
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest~=8.3",
    "pytest-runner"
]

[project.urls]
Homepage = "https://github.com/warnermedia/artemis/backend/lambdas/scheduled/update_github_org_users"

[tool.pytest.ini_options]
addopts = "-m \"not integtest and not end2end\" --disable-pytest-warnings"
testpaths = ["tests"]
